--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="utf-8">
   <body>
-    <textarea style="font-size:xx-large" rows=30 cols=80></textarea>
+    <textarea style="font-size:xx-large; height:100%; width:100%"></textarea>
   </body>
   <script src="index.js"></script>
   <script>pinyinify(document.querySelector('textarea'))</script>
