get ready for node testing

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <textarea style="font-size:xx-large; height:100%; width:100%"></textarea>
   </body>
   <script src="index.js"></script>
-  <script>pinyinify(document.querySelector('textarea'))</script>
+  <script>pinyinArea.pinyinify(document.querySelector('textarea'))</script>
 </html>
